# CPP-Boilerplate

./: .gitignore  CMakeLists.txt  README.md  prepare-upload.sh
executable/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
tests/: CMakeLists.txt
tests/src/: tests.cpp
